# MicroServiceContainer

./: build_pc.sh
Launcher/: CMakeLists.txt  Crypto.cpp  Crypto.h  main.cpp
Service/: CMakeLists.txt  IMicroService.h  MicroService.cpp  MicroService.h
Transmitter/: CMakeLists.txt  Transmitter.cpp  Transmitter.h
